src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>First_Contact_Notes__c</fullName>
        <description>First contact notes - maps from lead</description>
        <label>First Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Contact_Phone__c</fullName>
        <label>First Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Contact_Relationship__c</fullName>
        <label>First Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Opp_Parse__c</fullName>
        <formula>LEFT(  Name__c , FIND( &quot; &quot;,  Name__c ) -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name Opp Parse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_c__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_fr__c</fullName>
        <formula>TEXT(Account.Client_Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Address__c</fullName>
        <label>Guarantor Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Email__c</fullName>
        <label>Guarantor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guarantor_Name__c</fullName>
        <label>Guarantor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Phone__c</fullName>
        <label>Guarantor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Haven_Admit_Date__c</fullName>
        <label>Haven Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Haven_Discharge_Date__c</fullName>
        <label>Haven Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Haven_Discharge_Type__c</fullName>
        <label>Haven Discharge Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Haven_Length_of_Stay__c</fullName>
        <formula>Haven_Discharge_Date__c -  Haven_Admit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Haven Length of Stay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Admit_Date__c</fullName>
        <label>Hospital Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital_Discharge_Date__c</fullName>
        <label>Hospital Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hospital Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Hospital Name)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICFR_Admit_Date__c</fullName>
        <label>ICFR Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICFR_Discharge_Date__c</fullName>
        <label>ICFR Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICFR_Discharge_Type__c</fullName>
        <label>ICFR Discharge Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICFR_If_Insurance_Amount_to_Pay__c</fullName>
        <label>(ICFR) If Insurance, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICFR_If_Private_Pay_Amount_to_Pay__c</fullName>
        <label>(ICFR) If Private Pay, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICFR_Length_of_Stay__c</fullName>
        <formula>ICFR_Discharge_Date__c  -  ICFR_Admit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICFR Length of Stay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IOP_Cost__c</fullName>
        <label>IOP Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IOP_Days_Authorized__c</fullName>
        <label>IOP Days Authorized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_This_A_Readmit__c</fullName>
        <label>Is This a Readmit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Insurance_Amount_to_Pay__c</fullName>
        <inlineHelpText>This will fill out the field for amount paid towards DED/OOP</inlineHelpText>
        <label>(Haven) If Insurance, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_PN_Amount_Due__c</fullName>
        <label>If PN, Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_Private_Pay_Admission_Amount_Paid__c</fullName>
        <label>If Private Pay, Admission Amount Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_Private_Pay_Amount_Paid__c</fullName>
        <label>If Private Pay, Amount Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_Private_Pay_Amount_to_Pay__c</fullName>
        <inlineHelpText>This will fill out the Private pay amount paid section.</inlineHelpText>
        <label>(Haven) If Private Pay, Amount to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inbound_Referring_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inbound Referring Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referring Facility)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InitiateSendAdmitAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This works in tandem with the &quot;Send Admission Alert&quot; Button. The button triggers a flow that checks this box, initiating process builder to send the email.</description>
        <label>InitiateSendAdmitAlert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <label>Insurance Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Insurance_Company__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Insurance Company)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <label>Insurance Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Phone__c</fullName>
        <label>Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Verification_Type__c</fullName>
        <label>Insurance Verification Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Verification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Verification</label>
        <referenceTo>Insurance_Verification__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name_Opp_Parse__c</fullName>
        <formula>RIGHT( Name__c, LEN( Name__c) - FIND(&quot; &quot;,  Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name Opp Parse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadUserId__c</fullName>
        <formula>IF(ISPICKVAL(LeadSource, &quot;Caleigh Hoskins&quot;), &quot;0051U000007xNxbQAE&quot;,
IF(ISPICKVAL(LeadSource, &quot;Austin Thomas&quot;), &quot;0051U0000074bQBQAY&quot;,
IF(ISPICKVAL(LeadSource, &quot;Colin Troy&quot;), &quot;0051U000007xNxgQAE&quot;,
IF(ISPICKVAL(LeadSource, &quot;Calen Cox&quot;), &quot;0051U000007x5KeQAI&quot;,
IF(ISPICKVAL(LeadSource, &quot;Jay Callas&quot;), &quot;0051U0000089JhuQAE&quot;,
IF(ISPICKVAL(LeadSource, &quot;Katie Gibson&quot;), &quot;0051U000007LkQrQAK&quot;,
IF(ISPICKVAL(LeadSource, &quot;Liz Cormier&quot;), &quot;0051U0000089JhzQAE&quot;,
IF(ISPICKVAL(LeadSource, &quot;Matt O&apos;Malley&quot;), &quot;0051U0000089Ji4QAE&quot;,
IF(ISPICKVAL(LeadSource, &quot;Michael Leggiero&quot;), &quot;0051U0000089Ji9QAE&quot;,
IF(ISPICKVAL(LeadSource, &quot;Mike Hulick&quot;), &quot;0051U000007LOUIQA4&quot;,
IF(ISPICKVAL(LeadSource, &quot;Nick Gore&quot;), &quot;0051U0000089JiEQAU&quot;,
IF(ISPICKVAL(LeadSource, &quot;Ralph Johnson&quot;), &quot;0051U0000074ZNTQA2&quot;,
IF(ISPICKVAL(LeadSource, &quot;Saul Kane&quot;), &quot;0051U0000089JiJQAU&quot;,
IF(ISPICKVAL(LeadSource, &quot;Shaun Wallace&quot;), &quot;0051U0000089JiOQAU&quot;,
IF(ISPICKVAL(LeadSource, &quot;Nick Newcity&quot;), &quot;0051U0000074kHeQAI&quot;, &quot;&quot;
)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Details_Specific__c</fullName>
        <label>Lead Source Details (Specific)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Marketing_Lead_Source_Specific__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Billy Briggs</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Campaign A</fullName>
                </value>
                <value>
                    <fullName>Campaign L</fullName>
                </value>
                <value>
                    <fullName>Campaign LT</fullName>
                </value>
                <value>
                    <fullName>Campaign P</fullName>
                </value>
                <value>
                    <fullName>Campaign R</fullName>
                </value>
                <value>
                    <fullName>CCR Facebook Call Now</fullName>
                </value>
                <value>
                    <fullName>CCR Google Organic</fullName>
                </value>
                <value>
                    <fullName>CCR Main</fullName>
                </value>
                <value>
                    <fullName>CCR Psychology Today</fullName>
                </value>
                <value>
                    <fullName>Facebook Call Now</fullName>
                </value>
                <value>
                    <fullName>Google Ads</fullName>
                </value>
                <value>
                    <fullName>Google Organic</fullName>
                </value>
                <value>
                    <fullName>Haven Addiction Center Listing</fullName>
                </value>
                <value>
                    <fullName>Haven Facebook</fullName>
                </value>
                <value>
                    <fullName>Haven Facebook Call Now</fullName>
                </value>
                <value>
                    <fullName>Haven FB</fullName>
                </value>
                <value>
                    <fullName>Haven Google 1</fullName>
                </value>
                <value>
                    <fullName>Haven Google 11</fullName>
                </value>
                <value>
                    <fullName>Haven Google Ads</fullName>
                </value>
                <value>
                    <fullName>Haven Listing</fullName>
                </value>
                <value>
                    <fullName>Haven Main</fullName>
                </value>
                <value>
                    <fullName>Haven Psychology Today</fullName>
                </value>
                <value>
                    <fullName>Haven Rehab.com</fullName>
                </value>
                <value>
                    <fullName>Haven Web</fullName>
                </value>
                <value>
                    <fullName>Haven WebMD</fullName>
                </value>
                <value>
                    <fullName>Haven Yelp</fullName>
                </value>
                <value>
                    <fullName>ICFR Addiction Center Listing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Program__c</fullName>
        <label>Length of Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Care_Unused_Authorized_Days__c</fullName>
        <label>Level of Care for Unused Authorized Days</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Care__c</fullName>
        <label>Level of Care</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>Observation</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                    <label>TBD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Lead_Source_Specific__c</fullName>
        <label>Marketing Lead Source (Specific)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Lead_Source_Specific</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID_Number__c</fullName>
        <label>Member ID Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Today__c</fullName>
        <formula>CASE(MONTH(TODAY()),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mr_No__c</fullName>
        <label>Mr No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OOP_Max_In_Net__c</fullName>
        <label>OOP Max (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Max_Out_Net__c</fullName>
        <label>OOP Max (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Met_In_Net__c</fullName>
        <label>OOP Met (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Met_Out_Net__c</fullName>
        <label>OOP Met (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Admissions_Created_Date__c</fullName>
        <label>Original Admissions Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Facility_Admitted_To__c</fullName>
        <label>Original Facility Admitted To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haven Detox</fullName>
                </value>
                <value>
                    <fullName>Indiana Center for Recovery</fullName>
                </value>
                <value>
                    <fullName>Recovery Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Insurance_Info__c</fullName>
        <label>Other Insurance Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PA_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PA Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHP_Days_Authorized__c</fullName>
        <label>PHP Days Authorized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHP_Days__c</fullName>
        <label>PHP Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Through_Date__c</fullName>
        <label>Paid Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <formula>TEXT (IF( NOT( ISBLANK( DOB__c) ) ,
  IF( DATE( 2000 , MONTH( DOB__c ) , DAY( DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( DOB__c),
     YEAR (Today()) - YEAR ( DOB__c) -1 ),
  null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Birth_Date__c</fullName>
        <label>Patient Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_City__c</fullName>
        <label>Patient City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Cityfr__c</fullName>
        <formula>Account.PersonContact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Full_Name__c</fullName>
        <formula>Patient_First_Name__c  &amp; &quot; &quot;  &amp;  Patient_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Member_ID__c</fullName>
        <label>Patient Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patient_SSN__c</fullName>
        <label>Patient SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_State_new__c</fullName>
        <description>Patient State Picklist</description>
        <label>Patient State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Statefr__c</fullName>
        <formula>Account.PersonContact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Street_Address__c</fullName>
        <label>Patient Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Streetfr__c</fullName>
        <formula>Account.PersonContact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Zip__c</fullName>
        <label>Patient Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Zipfr__c</fullName>
        <formula>Account.PersonContact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Private Pay</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Admit_Date__c</fullName>
        <label>Patient Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_DOB__c</fullName>
        <label>Policy Holder DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Name__c</fullName>
        <label>Policy Holder Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type_ref__c</fullName>
        <description>Policy type for referrals</description>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>CHOICE</fullName>
                </value>
                <value>
                    <fullName>CHOICE PLUS</fullName>
                </value>
                <value>
                    <fullName>OPEN ACCESS</fullName>
                </value>
                <value>
                    <fullName>OPEN ACCESS PLUS</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreCert_Number__c</fullName>
        <label>Pre-Cert Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Admission_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Pre-assessment</description>
        <label>Pre-Admission Assessment</label>
        <referenceTo>Pre_Admission_Assessment__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Cert_Phone_Number__c</fullName>
        <label>Pre-Cert Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pre_Cert_Phone_Numberfr__c</fullName>
        <formula>Insurance_Verification__r.Precert_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Cert Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Cert_Req_Sent__c</fullName>
        <formula>IF(Admissions_Alert_Sent__c = TRUE , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Cert Req Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Doctor__c</fullName>
        <label>Primary Doctor</label>
        <length>253</length>
        <type>Text</type>
    </fields>
</CustomObject>